fix: remove test/resources + refactor tests