@@ -2,6 +2,7 @@ package com.skypedal.skypedal_backend.rest;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.skypedal.skypedal_backend.dto.UserDTO;
+import com.skypedal.skypedal_backend.dto.UsersRewardsDTO;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -17,6 +18,9 @@ import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 import java.util.*;
 
 import java.util.List;
+
+import static org.hamcrest.Matchers.hasSize;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
@@ -38,7 +42,9 @@ public class UserControllerIntegrationTest {
         RequestBuilder req = MockMvcRequestBuilders.get("/users/3");
 
         ResultMatcher checkStatus = MockMvcResultMatchers.status().isOk();
-        UserDTO expectedUser = new UserDTO(3L, "John", "Johnson", "John@email.com", null, 25, "Leeds", Collections.emptyList());
+        UserDTO expectedUser = new UserDTO(3L, "John", "Johnson", "John@email.com", null, 25, "Leeds",  List.of(
+                new UsersRewardsDTO(7, "Thursday","2024/09/06 T 12:00",false, 1, 3L)
+        ));
         String expectedUserAsJSON = this.mapper.writeValueAsString(expectedUser);
         ResultMatcher checkBody = MockMvcResultMatchers.content().json(expectedUserAsJSON);
 
@@ -50,20 +56,14 @@ public class UserControllerIntegrationTest {
     void testGetAllUsers() throws Exception {
         RequestBuilder req = MockMvcRequestBuilders.get("/users/all");
         ResultMatcher checkStatus = MockMvcResultMatchers.status().isOk();
-        UserDTO user1 = new UserDTO(1L, "will", "moolman", "will@sky.uk", null, 42, "Livingston", Collections.emptyList());
-        UserDTO user2 = new UserDTO(2L, "Sam", "El", "Samel@sky.com", null, 25, "Brentwood", Collections.emptyList());
-        UserDTO user3 = new UserDTO(3L, "John", "Johnson", "John@email.com", null, 25, "Leeds", Collections.emptyList());
-        List<UserDTO> expectedUsers = List.of(user1, user2, user3);
-        String expectedUsersAsJSON = this.mapper.writeValueAsString(expectedUsers);
-        ResultMatcher checkBody = MockMvcResultMatchers.content().json(expectedUsersAsJSON);
 
-        this.mvc.perform(req).andExpect(checkStatus).andExpect(checkBody);
+        this.mvc.perform(req).andExpect(jsonPath("$", hasSize(5))).andExpect(checkStatus);
     }
 
     //tests UPDATE user fields
     @Test
     void testUpdateUser() throws Exception {
-        UserDTO updatedUser = new UserDTO(3L, "Bob", "Bobson", "bob@email.com", null, 30, "Livingston", Collections.emptyList());
+        UserDTO updatedUser = new UserDTO(3L, "Bob", "Bobson", "bob@email.com", null, 30, "Livingston",Collections.emptyList());
         String updatedUserAsJSON = this.mapper.writeValueAsString(updatedUser);
 
         RequestBuilder req = MockMvcRequestBuilders
@@ -93,7 +93,7 @@ public class UserControllerIntegrationTest {
     // tests USER NOT FOUND
     @Test
     void testGetUserByIdNotFound() throws Exception {
-        RequestBuilder req = MockMvcRequestBuilders.get("/users/5");
+        RequestBuilder req = MockMvcRequestBuilders.get("/users/9");
         ResultMatcher checkStatus = MockMvcResultMatchers.status().isNotFound();
 
         this.mvc.perform(req).andExpect(checkStatus);
